Fix spacing between sticky sections

--- a/packages/styles/_sass/pm-styles/_pm-sticky-header.scss
+++ b/packages/styles/_sass/pm-styles/_pm-sticky-header.scss
@@ -25,7 +25,7 @@
 }
 
 .container-section-sticky-section {
-  margin-bottom: 8rem;
+  margin-bottom: 12rem;
 }
 
 // not sticky on mobile
@@ -33,5 +33,8 @@
   .sticky-title {
     position: static;
     box-shadow: none;
+  }
+  .container-section-sticky-section {
+    margin-bottom: 8rem;
   }
 }
